--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meal-tracker-front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "https://meal-tracker-back.herokuapp.com/",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@tailwindcss/forms": "^0.3.3",
